ui.frontend/src/main/webpack/etisalat/styles/custom-components/header/mega-navigation.scss
/* ... */
.sub-menu-wrap.mega-dropdown.with-six .menu-top {
    display: flex;
}

.sub-menu-wrap.mega-dropdown.with-six .tiles-wrapper .tile .tile-content-wrapp,
.sub-menu-wrap.mega-dropdown.with-six .tiles-wrapper .tile div.cover {
    -webkit-border-radius: 0;
    -moz-border-radius: 0;
    border-radius: 4px;
}

.main-mega-menu-desktop {
    z-index: 99 !important;
}

.main-mega-menu-desktop .nav-wrap {
    display: flex;
    align-items: center;
    position: relative;
}

.main-mega-menu-desktop .mega-menu-navbar-default {
    top: 0;
    position: fixed;
    height: 56px;
    width: 100%;
    background-color: $white;
    text-transform: uppercase;
    border: none;
    box-shadow: 0 1px 8px 0 rgba(0, 0, 0, 0.15);
    transition: all 0.25s ease-in-out;
    z-index: 12;
}

@media (min-width: 992px) {
    .main-mega-menu-desktop .mega-menu-navbar-default {
        height: 90px;
        top: 48px;
    }
}

.main-mega-menu-desktop .mega-menu-navbar-default .mega-menu-navbar {
    border: 0;
    margin-bottom: 0;
    margin: 0 auto;
    // width: 1224px;

    @include sm {
        width: 100%;
    }

    @include md {
        width: 100%;
    }
}

@media (min-width: 992px) {
    .main-mega-menu-desktop .mega-menu-navbar-default .logo-container {
        display: flex;
    }
}

.main-mega-menu-desktop .mega-menu-navbar-default .logo-container .navbar-header {
    height: 56px;
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    float: none;
    transition: all 0.25s ease-in-out;
}

@media (min-width: 992px) {
    .main-mega-menu-desktop .mega-menu-navbar-default .logo-container .navbar-header {
        height: 90px;
        padding-right: 2rem;
    }
}

.main-mega-menu-desktop .mega-menu-navbar-default .logo-container .navbar-header a {
    width: toRem(86);
    transition: all 0.25s ease-in-out;
    margin-bottom: toRem(5);
}

@media (min-width: 992px) {
    .main-mega-menu-desktop .mega-menu-navbar-default .logo-container .navbar-header a {
        width: 150px;
        transition: all 0.25s ease-in-out;
    }
}

.main-mega-menu-desktop .mega-menu-navbar-default .logo-container .navbar-header a img {
    width: 86px;
    height: auto;
}

@media (min-width: 992px) {
    .main-mega-menu-desktop .mega-menu-navbar-default .logo-container .navbar-header a img {
        width: 140px;
        transition: all 0.25s ease-in-out;
    }
}

.main-mega-menu-desktop .mega-menu-navbar-default .navbar-items {
    @include font-family-Neotech();
    display: flex;
    flex: 1 1 0;
    justify-content: space-between;
}

.main-mega-menu-desktop .mega-menu-navbar-default .navbar-items .nav.navbar-nav {
    padding: 0;
    list-style: none;
    display: flex;
}

.main-mega-menu-desktop .mega-menu-navbar-default .navbar-items .nav.navbar-nav>li {
    position: inherit;
}

.main-mega-menu-desktop .mega-menu-navbar-default .navbar-items .nav.navbar-nav>li>a {
    height: 90px;
    line-height: 90px;
    padding: 0 toRem(16);
    transition: all 0.25s ease-in-out;
    color: $gray-fill;
    cursor: pointer;
    font-size: 1rem;
    &:hover{
        background-color: unset;
    }
}

@media (min-width: 1248px) {
    .main-mega-menu-desktop .mega-menu-navbar-default .navbar-items .nav.navbar-nav>li>a {
        padding-right: 1.6rem;
        padding-left: 1.6rem;
        min-width: 108px;
        text-align: center;
    }
}

.main-mega-menu-desktop .mega-menu-navbar-default .navbar-items .nav.navbar-nav>li>a:hover {
    color: $gray-fill;
}

@media all and (-ms-high-contrast: none) {
    .main-mega-menu-desktop .mega-menu-navbar-default .navbar-items .nav.navbar-nav>li>a {
        font-size: 14px;
        padding-right: 1rem;
    }

    .main-mega-menu-desktop .mega-menu-navbar-default .navbar-items .nav.navbar-nav>li>a ::-ms-backdrop {
        font-size: 14px;
        padding-right: 1rem;
    }
}

@media all and (-ms-high-contrast: none) and (min-width: 1248px) {
    .main-mega-menu-desktop .mega-menu-navbar-default .navbar-items .nav.navbar-nav>li>a {
        font-size: 16px;
        padding-right: 23px;
    }
}

.main-mega-menu-desktop .mega-menu-navbar-default .navbar-items .nav.navbar-nav>li.active>a {
    color: $main-green;
    background-color: transparent;
}

.main-mega-menu-desktop .mega-menu-navbar-default .navbar-items .nav.navbar-nav>li.icon-link a {
    min-width: auto;
    display: flex;
    line-height: normal;
    align-items: center;
    justify-content: center;
}

.main-mega-menu-desktop .mega-menu-navbar-default .navbar-items .nav.navbar-nav>li.icon-link::before {
    content: '';
    width: 1px;
    height: 35px;
    border: solid 1px $slight-gray;
    position: absolute;
    top: 28px;
    z-index: 2;
}

@media (min-width: 768px) {
    .main-mega-menu-desktop .mega-menu-navbar-default .navbar-items .nav.navbar-nav {
        margin: 0 !important;
    }
}

.main-mega-menu-desktop .mega-menu-navbar-default .navbar-items .nav.navbar-nav.nav-right li:last-child a {
    padding-right: 0;
}
.main-mega-menu-desktop .mega-menu-navbar-default .navbar-items .nav.navbar-nav.nav-right li{
    .replaced-svg{
        height: toRem(24);
        width: toRem(24);
    }
}

.main-mega-menu-desktop .mega-menu-navbar-default .navbar-items .nav.navbar-nav.nav-right .sub-menu-wrap .sub-menu {
    max-width: 290px;
}

.main-mega-menu-desktop .mega-menu-navbar-default .navbar-items .nav.navbar-nav.nav-right .menu-items-footer .sub-menu {
    max-width: 100%;
}

.main-mega-menu-desktop .mega-menu-navbar-default .navbar-nav>li:after {
    border-bottom: 3px solid transparent;
    display: block;
    content: "";
    width: auto;
    z-index: 222222;
    height: 3px;
    position: relative;
}

.main-mega-menu-desktop .mega-menu-navbar-default .navbar-nav>li:hover>a {
    color: $main-green !important;
}

.main-mega-menu-desktop .mega-menu-navbar-default .navbar-nav>li:hover a+.sub-menu-wrap {
    display: flex !important;
}
/* ... */

